# bloom-shell

./: Cargo.toml  README.md
shell/: Cargo.toml
shell/src/: cli.rs  interactive.rs  main.rs  printer.rs
shell/src/cli/: abi_command.rs  amend_command.rs  key_command.rs  other_command.rs  rpc_command.rs  store_command.rs  tx_command.rs  util.rs
tool/: Cargo.toml
tool/src/: client.rs  crypto.rs  lib.rs
tool/src/client/: basic.rs
